feat: simplifica solicitacoes e adiciona turnos a agenda
